[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/coin.png" type="Texture" id=2]
[ext_resource path="res://Levels/Skillbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/shop.tscn" type="PackedScene" id=4]

[node name="Interface" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 333.0
margin/top = 156.0
margin/right = 510.0
margin/bottom = 170.0
custom_colors/font_color = Color( 0.847656, 0.119202, 0.119202, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Welcome to Zombie Traffic!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Main Menu" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 356.0
margin/top = 240.0
margin/right = 1023.0
margin/bottom = 488.0

[node name="single_button" type="Button" parent="Main Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 49.0
margin/right = 251.0
margin/bottom = 176.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.992188, 0.597105, 0.0891418, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Single Player"
flat = false

[node name="multi_button" type="Button" parent="Main Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 398.0
margin/top = 51.0
margin/right = 539.0
margin/bottom = 178.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.596078, 0.0862745, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Multiplayer"
flat = false

[node name="Labels" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="enemies" type="Label" parent="Labels"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 636.0
margin/top = 61.0
margin/right = 675.0
margin/bottom = 75.0
custom_colors/font_color = Color( 0.941406, 0.0367737, 0.163988, 1 )
custom_colors/font_color_shadow = Color( 0.0473785, 0.0536573, 0.449219, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="total_enemies" type="Label" parent="Labels"]

visibility/visible = false
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 636.0
margin/top = 103.0
margin/right = 675.0
margin/bottom = 117.0
custom_colors/font_color = Color( 0.941406, 0.0367737, 0.163988, 1 )
custom_colors/font_color_shadow = Color( 0.0473785, 0.0536573, 0.449219, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time" type="Label" parent="Labels"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 570.0
margin/top = 13.0
margin/right = 609.0
margin/bottom = 29.0
custom_colors/font_color = Color( 0.941406, 0.0367737, 0.163988, 1 )
custom_colors/font_color_shadow = Color( 0.0473785, 0.0536573, 0.449219, 1 )
text = "01:00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mission" type="Label" parent="Labels"]

rect/scale = Vector2( 2.5, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 694.0
margin/top = 13.0
margin/right = 756.0
margin/bottom = 29.0
custom_colors/font_color = Color( 0.941406, 0.0367737, 0.163988, 1 )
custom_colors/font_color_shadow = Color( 0.0473785, 0.0536573, 0.449219, 1 )
text = "Mission 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player1" type="Control" parent="Labels"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="lives" type="Label" parent="Labels/Player1"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 17.0
margin/top = 23.0
margin/right = 60.0
margin/bottom = 38.0
custom_colors/font_color = Color( 0.243759, 0.583854, 0.832031, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "O O O"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lvl" type="Label" parent="Labels/Player1"]

rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 113.0
margin/right = 81.0
margin/bottom = 128.0
custom_colors/font_color = Color( 0.243137, 0.580392, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rank: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="weapon" type="Label" parent="Labels/Player1"]

rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 158.0
margin/right = 81.0
margin/bottom = 173.0
custom_colors/font_color = Color( 0.243137, 0.580392, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Bullets"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="can_shop" type="Label" parent="Labels/Player1"]

visibility/visible = false
rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 495.0
margin/top = 140.0
margin/right = 663.0
margin/bottom = 155.0
custom_colors/font_color = Color( 0.243137, 0.580392, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press \'G\' to open the shop"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="coins" type="Label" parent="Labels/Player1"]

editor/display_folded = true
rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 56.0
margin/top = 195.0
margin/right = 111.0
margin/bottom = 209.0
custom_colors/font_color = Color( 0.243137, 0.580392, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Labels/Player1/coins"]

transform/pos = Vector2( -9.89664, 5.57917 )
transform/scale = Vector2( 0.0903324, 0.0903324 )
texture = ExtResource( 2 )

[node name="bullet_strength" type="Label" parent="Labels/Player1"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 226.0
margin/right = 125.0
margin/bottom = 241.0
custom_colors/font_color = Color( 0.243137, 0.580392, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Bullet strength: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fire_rate" type="Label" parent="Labels/Player1"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 251.0
margin/right = 125.0
margin/bottom = 266.0
custom_colors/font_color = Color( 0.243137, 0.580392, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Fire rate: 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player2" type="Control" parent="Labels"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="lives" type="Label" parent="Labels/Player2"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 907.0
margin/top = 21.0
margin/right = 1049.0
margin/bottom = 36.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "O O O"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lvl" type="Label" parent="Labels/Player2"]

rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1160.0
margin/top = 113.0
margin/right = 1237.0
margin/bottom = 128.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0.00239563, 0.00241923, 0.00390625, 1 )
text = "Rank: 1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="weapon" type="Label" parent="Labels/Player2"]

rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1130.0
margin/top = 157.0
margin/right = 1220.0
margin/bottom = 172.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0.00239563, 0.00241923, 0.00390625, 1 )
text = "Bullets"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="can_shop" type="Label" parent="Labels/Player2"]

visibility/visible = false
rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 497.0
margin/top = 182.0
margin/right = 663.0
margin/bottom = 197.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0.00239563, 0.00241923, 0.00390625, 1 )
text = "Press \'P\' to open the shop"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="coins" type="Label" parent="Labels/Player2"]

editor/display_folded = true
rect/scale = Vector2( 2.3, 2.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1093.0
margin/top = 194.0
margin/right = 1183.0
margin/bottom = 209.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0.00239563, 0.00241923, 0.00390625, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Labels/Player2/coins"]

transform/pos = Vector2( 99.8588, 6.01395 )
transform/scale = Vector2( 0.0903324, 0.0903324 )
texture = ExtResource( 2 )

[node name="bullet_strength" type="Label" parent="Labels/Player2"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1114.0
margin/top = 225.0
margin/right = 1263.0
margin/bottom = 240.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0.00239563, 0.00241923, 0.00390625, 1 )
text = "Bullet strength: 1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fire_rate" type="Label" parent="Labels/Player2"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1114.0
margin/top = 250.0
margin/right = 1263.0
margin/bottom = 265.0
custom_colors/font_color = Color( 0.0901961, 0.878431, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0.00239563, 0.00241923, 0.00390625, 1 )
text = "Fire rate: 2"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bars" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="xp_bar1" type="ProgressBar" parent="Bars"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 17.0
margin/top = 73.0
margin/right = 155.0
margin/bottom = 102.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="xp_bar2" type="ProgressBar" parent="Bars"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1198.0
margin/top = 73.0
margin/right = 1336.0
margin/bottom = 102.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Skillbar1" parent="." instance=ExtResource( 3 )]

visibility/visible = false
margin/left = 311.0
margin/top = 608.0
margin/right = 487.0
margin/bottom = 666.0

[node name="Skillbar2" parent="." instance=ExtResource( 3 )]

visibility/visible = false
margin/left = 843.0
margin/top = 608.0
margin/right = 1019.0
margin/bottom = 666.0

[node name="shop1" parent="." instance=ExtResource( 4 )]

visibility/visible = false
margin/left = 94.0
margin/top = 30.0
margin/right = 504.0
margin/bottom = 488.0

[node name="shop2" parent="." instance=ExtResource( 4 )]

visibility/visible = false
margin/left = 715.0
margin/top = 30.0
margin/right = 1125.0
margin/bottom = 488.0


